<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/task_layout_shape"
    android:elevation="5dp"
    android:layout_margin="10dp"
    >
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/level">
        <TextView
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskName"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="30sp"
            android:layout_centerInParent="true"
            android:textColor="#8099ff"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            >

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/percent"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeADay"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>