<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/Parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/task_layout_shape"
    android:elevation="10dp"
    android:layout_margin="10dp"
    >
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/level"
        >

        <ImageView
            android:id="@+id/background_img"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/task_item_shape"
            android:foreground="@drawable/image_forground_doing"
            android:scaleType="centerCrop"
            android:src="@drawable/bg0"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/percent_container"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskName"
                android:textSize="30sp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="10dp"
                android:fontFamily="@font/orange_title"
                android:layout_marginBottom="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/name_shape_doing"
                android:textColor="@android:color/black"
                />
            <TextView
                android:id="@+id/action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/start"
                android:textSize="19sp"
                android:textColor="#000"
                android:fontFamily="@font/normal"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeADay"
                android:textSize="@dimen/duration_size"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:textColor="#e1e1e1"
                android:layout_centerVertical="true"
                android:background="@drawable/item_date_shape"
                />
            <android.widget.Button
                android:id="@+id/redo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/redo"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/delete"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                />
            <android.widget.Button
                android:id="@+id/delete"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/delete1"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/percent_container"
            android:layout_below="@id/background_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loading_bar_height"
            >
            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/percent"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>