<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        >
        <ImageView
            android:id="@+id/logo_supp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_info"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What is this app about ?"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            />
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/descApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:textColor="@android:color/black"
                />
            <TextView
                android:id="@+id/stpartDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stPart"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ndPart"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:textColor="@android:color/black"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdpart"
            android:textAllCaps="false"
            android:textSize="10dp"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >


            <Button
                android:id="@+id/back_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:textSize="17dp"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/to_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="17dp"
                android:backgroundTint="#ff1d58"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".03"
        />

</LinearLayout>